# dobot_quad_sdk

./: .gitignore  Dockerfile  README.md  README.zh-CN.md
assets/: test2.flac
doc/: high_level_api.md  high_level_api.zh-CN.md  low_level_api.md  low_level_api.zh-CN.md
high_level/cpp/: CMakeLists.txt  e1_get_available_motions.cpp  e2_direct_state_switch.cpp  e3_auto_state_switch.cpp  e4_velocity_sequence.cpp  e5_robot_state.cpp  e6_balance_motions.cpp  kill_robot.cpp
high_level/cpp/proto/: grpc_service.proto
high_level/python/: compile_grpc.sh  e1_get_available_motions.py  e2_direct_state_switch.py  e3_auto_state_switch.py  e4_velocity_sequence.py  e5_robot_state.py  e6_balance_motions.py  grpc_service.proto  kill_robot.py  requirements.txt
high_level/python/proto/: grpc_service_pb2.py  grpc_service_pb2_grpc.py
low_level/cpp/: CMakeLists.txt
